--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,8 @@
     "@linaria/shaker": "^3.0.0-beta.15",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.30.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
