--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "app",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@linaria/babel-preset": "^3.0.0-beta.15",
