--- a/app/package.json
+++ b/app/package.json
@@ -4,17 +4,21 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.8.10",
     "@linaria/babel-preset": "^3.0.0-beta.15",
     "@linaria/core": "^3.0.0-beta.15",
     "@linaria/react": "^3.0.0-beta.15",
     "@linaria/shaker": "^3.0.0-beta.15",
+    "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-app-rewired start",
