--- a/app/package.json
+++ b/app/package.json
@@ -10,14 +10,17 @@
     "@linaria/react": "^3.0.0-beta.15",
     "@linaria/shaker": "^3.0.0-beta.15",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-use-cookie": "^1.4.0",
     "yup": "^0.32.11"
   },
   "scripts": {
