--- a/app/package.json
+++ b/app/package.json
@@ -16,11 +16,11 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.1.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-use-cookie": "^1.4.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
